# NITRIX

./: .dockerignore  .flaskenv  .gitignore  DEPLOY.md  Dockerfile  README.md  compress_logs  config.py  docker-compose.yaml  flask_app.py  make_backup  nik.env  nitrix_import_test.csv  pyproject.toml  requirements.txt  sample.env  start_server.sh  wsgi.ini
.github/workflows/: python-app.yaml
app/: __init__.py  database.py  logger.py  utils.py  views.py  worker.py
app/auth/: forms.py  views.py
app/controller/: account.py  account_extension.py  csv_validator.py  phone.py  reseller_product.py
app/css/: main.css
app/dumper/: __init__.py
app/forms/: __init__.py  account.py  account_extention.py  auth.py  change_password.py  phone.py  product.py  reseller.py  reseller_product.py  user.py
app/js/: account_edit.js  account_edit_ecxt.js  main.js  reseller_edit.js
app/models/: __init__.py  account.py  account_changes.py  account_extensions.py  history_changes.py  phone.py  product.py  reseller.py  user.py  (+1 more)
db-backup/: make_backup_db.sh
html/: base.html  login.html  product_add_edit.html  reseller_add_edit.html  user_edit.html
migrations/: env.py
tests/: mock_db.py  nitrix_import_test.csv  test_account.py  test_account_extension.py  test_app.py  test_auth.py  test_ninja.py  test_phone.py  test_product.py  test_reseller.py  test_reseller_product.py  test_shed.py  test_user.py  ttest_ninja.py  utils.py
tools/: __init__.py  db_to_json.py  fix_invoice_ninja.py  json_to_db.py  json_to_ninja.py  ninja_to_json.py  read_json.py  sync_ninja_ids.py  write_json.py
(+48 files in other folders)
