[tool.poetry]
name = "NITRIX"
version = "2.0.1"
description = ""
authors = ["Simple2B <simple2b.info@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
python-dotenv = "^0.19.1"
python-dateutil = "^2.8.2"
Flask-Login = "^0.5.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
onetimepass = "^1.0.1"
Flask-WTF = "^1.0.0"
requests = "^2.26.0"
PyQRCode = "^1.2.1"
Cerberus = "^1.3.4"
psycopg2-binary = "^2.9.1"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^6.2.5"
black = "^21.10b0"
timecop = "^0.5.0-alpha.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
